--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "chart.js": "^4.4.7",
+    "framer-motion": "^12.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
